[gd_scene load_steps=16 format=2]

[ext_resource path="res://Sprites/Fondo2.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Fondo1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Fondo3.png" type="Texture" id=3]
[ext_resource path="res://Pixeltype.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Sprites/BotonNivel.png" type="Texture" id=5]
[ext_resource path="res://SelectLvl.gd" type="Script" id=6]
[ext_resource path="res://Sounds/Button.ogg" type="AudioStream" id=7]
[ext_resource path="res://Sprites/Keyboard/key-arrowright.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Keyboard/key-arrowleft.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Keyboard/key-esc.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Keyboard/key-arrowup.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Keyboard/key-r.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Keyboard/key-space.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]
size = 60
extra_spacing_top = 10
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 4 )

[node name="SelectLvl" type="Node"]
script = ExtResource( 6 )

[node name="Fondo1" type="Sprite" parent="."]
position = Vector2( 509.765, 297.53 )
scale = Vector2( 3.19414, 3.12045 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Fondo2" type="Sprite" parent="Fondo1"]
position = Vector2( 0.699711, -0.49031 )
texture = ExtResource( 1 )

[node name="Fondo3" type="Sprite" parent="Fondo1/Fondo2"]
position = Vector2( -0.0213776, 2.25937 )
scale = Vector2( 1, 1.00673 )
texture = ExtResource( 3 )

[node name="Nivel1" type="Button" parent="."]
margin_left = 154.0
margin_top = 145.0
margin_right = 332.0
margin_bottom = 247.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.0235294, 0.0235294, 0.0235294, 1 )
custom_colors/font_color_pressed = Color( 0.94902, 0.933333, 0.0196078, 1 )
text = "LEVEL 1"
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="BotonNivel" type="Sprite" parent="Nivel1"]
show_behind_parent = true
position = Vector2( 86.5, 54 )
scale = Vector2( 3.42857, 1.40816 )
texture = ExtResource( 5 )

[node name="Nivel2" type="Button" parent="."]
margin_left = 430.0
margin_top = 145.0
margin_right = 608.0
margin_bottom = 247.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.0235294, 0.0235294, 0.0235294, 1 )
custom_colors/font_color_pressed = Color( 0.94902, 0.933333, 0.0196078, 1 )
text = "LEVEL 2"
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="BotonNivel" type="Sprite" parent="Nivel2"]
show_behind_parent = true
position = Vector2( 86.5, 54 )
scale = Vector2( 3.42857, 1.40816 )
texture = ExtResource( 5 )

[node name="Nivel3" type="Button" parent="."]
margin_left = 702.0
margin_top = 145.0
margin_right = 880.0
margin_bottom = 247.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.0235294, 0.0235294, 0.0235294, 1 )
custom_colors/font_color_pressed = Color( 0.94902, 0.933333, 0.0196078, 1 )
text = "LEVEL 3"
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="BotonNivel" type="Sprite" parent="Nivel3"]
show_behind_parent = true
position = Vector2( 86.5, 54 )
scale = Vector2( 3.42857, 1.40816 )
texture = ExtResource( 5 )

[node name="Nivel4" type="Button" parent="."]
margin_left = 277.0
margin_top = 297.0
margin_right = 455.0
margin_bottom = 399.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.0235294, 0.0235294, 0.0235294, 1 )
custom_colors/font_color_pressed = Color( 0.94902, 0.933333, 0.0196078, 1 )
text = "LEVEL 4"
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="BotonNivel" type="Sprite" parent="Nivel4"]
show_behind_parent = true
position = Vector2( 86.5, 54 )
scale = Vector2( 3.42857, 1.40816 )
texture = ExtResource( 5 )

[node name="Nivel5" type="Button" parent="."]
margin_left = 568.0
margin_top = 297.0
margin_right = 746.0
margin_bottom = 399.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.0235294, 0.0235294, 0.0235294, 1 )
custom_colors/font_color_pressed = Color( 0.94902, 0.933333, 0.0196078, 1 )
text = "LEVEL 5"
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="BotonNivel" type="Sprite" parent="Nivel5"]
show_behind_parent = true
position = Vector2( 86.5, 54 )
scale = Vector2( 3.42857, 1.40816 )
texture = ExtResource( 5 )

[node name="Volver" type="Button" parent="."]
margin_left = 15.8496
margin_top = 12.5703
margin_right = 289.85
margin_bottom = 114.57
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.0235294, 0.0235294, 0.0235294, 1 )
custom_colors/font_color_pressed = Color( 0.94902, 0.933333, 0.0196078, 1 )
text = "BACK"
flat = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="BotonNivel" type="Sprite" parent="Volver"]
show_behind_parent = true
position = Vector2( 134.583, 54 )
scale = Vector2( 3.70924, 1.81222 )
texture = ExtResource( 5 )

[node name="SelecButton" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 13.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Arrows" type="Label" parent="."]
margin_left = 13.0
margin_top = 528.0
margin_right = 190.0
margin_bottom = 598.0
custom_fonts/font = SubResource( 2 )
text = "Use arrows
to move"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Up" type="Label" parent="."]
margin_left = 248.59
margin_top = 531.909
margin_right = 355.59
margin_bottom = 598.909
custom_fonts/font = SubResource( 2 )
text = "Use UP 
to jump"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacebar" type="Label" parent="."]
margin_left = 396.0
margin_top = 532.0
margin_right = 667.0
margin_bottom = 599.0
custom_fonts/font = SubResource( 2 )
text = "Use the spacebar
in the air to glide"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="R" type="Label" parent="."]
margin_left = 684.587
margin_top = 530.0
margin_right = 840.587
margin_bottom = 597.0
custom_fonts/font = SubResource( 2 )
text = "Use R
to restart"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Esc" type="Label" parent="."]
margin_left = 860.324
margin_top = 528.65
margin_right = 1016.32
margin_bottom = 595.65
custom_fonts/font = SubResource( 2 )
text = "Use esc
to pause"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="key-arrowright" type="Sprite" parent="."]
position = Vector2( 135.256, 489.461 )
scale = Vector2( 6, 6 )
texture = ExtResource( 8 )

[node name="key-arrowleft" type="Sprite" parent="key-arrowright"]
position = Vector2( -11.2338, 0.103767 )
texture = ExtResource( 9 )

[node name="key-arrowup" type="Sprite" parent="."]
position = Vector2( 300.538, 496.043 )
scale = Vector2( 6, 6 )
texture = ExtResource( 11 )

[node name="key-space" type="Sprite" parent="."]
position = Vector2( 527.596, 498.608 )
scale = Vector2( 4.78841, 6 )
texture = ExtResource( 13 )

[node name="key-r" type="Sprite" parent="."]
position = Vector2( 763.262, 495.789 )
scale = Vector2( 6, 6 )
texture = ExtResource( 12 )

[node name="key-esc" type="Sprite" parent="."]
position = Vector2( 933.35, 495.668 )
scale = Vector2( 6, 6 )
texture = ExtResource( 10 )

[connection signal="pressed" from="Nivel1" to="." method="_on_Nivel1_pressed"]
[connection signal="pressed" from="Nivel2" to="." method="_on_Nivel2_pressed"]
[connection signal="pressed" from="Nivel3" to="." method="_on_Nivel3_pressed"]
[connection signal="pressed" from="Nivel4" to="." method="_on_Nivel4_pressed"]
[connection signal="pressed" from="Nivel5" to="." method="_on_Nivel5_pressed"]
[connection signal="pressed" from="Volver" to="." method="_on_Volver_pressed"]
